--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="line"></span>
         </div>
     </nav>
-        <section>
+        <section id="luas segitiga">
             <div class="header-text">
                 <h1>Welcome to Katik</h1>
                 <p>Halo Semua, Selamat datang di katik!
@@ -64,6 +64,9 @@
                     type="reset">
                     </p>
                 </form>
+            </section>
+            <section id="keliling segitiga">
+            
                 <h2 class="rumus2">Keliling Segitiga</h2>
                 <img src="./assets/segitiga.jpg" class="img1" alt="keliling-segitiga">
                 <p class="rumus1">Rumus Keliling Segitiga yaitu: <br>
